--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+
+    <script src="~/Scripts/main.js" type="text/javascript"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
