Edit agreement API CALL and html page

--- a/Client/Views/Home/_AgreementsList.cshtml
+++ b/Client/Views/Home/_AgreementsList.cshtml
@@ -48,7 +48,7 @@
             @Html.DisplayFor(modelagreement => agreement.Duration)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=agreement.Id })
+            @Html.ActionLink("Edit", "EditAgreement", new { id=agreement.Id })
         </td>
     </tr>
 }
