SQL Server, base rates import

--- a/Client/Views/Home/EditAgreement.cshtml
+++ b/Client/Views/Home/EditAgreement.cshtml
@@ -22,14 +22,9 @@
             @Html.ValueFor(model => model.Customer.LastName)
         </div>
         <div>
-            @Html.LabelFor(model => model.BaseRate.Code)
+            @Html.LabelFor(model => model.BaseRateType)
             :
-            @Html.ValueFor(model => model.BaseRate.Code)
-        </div>
-        <div>
-            @Html.LabelFor(model => model.BaseRate.Value)
-            :
-            @Html.ValueFor(model => model.BaseRate.Value)
+            @Html.ValueFor(model => model.BaseRateType)
         </div>
         <div>
             @Html.LabelFor(model => model.Amount)
