--- a/Client/Views/Home/_AgreementsList.cshtml
+++ b/Client/Views/Home/_AgreementsList.cshtml
@@ -12,7 +12,7 @@
             @Html.DisplayNameFor(model => model.Customer)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.BaseRate.Code)
+            @Html.DisplayNameFor(model => model.BaseRateType)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Amount)
@@ -36,7 +36,7 @@
             @Html.DisplayFor(modelagreement => agreement.Customer.LastName)
         </td>
         <td>
-            @Html.DisplayFor(modelagreement => agreement.BaseRate.Code)
+            @Html.DisplayFor(modelagreement => agreement.BaseRateType)
         </td>
         <td>
             @Html.DisplayFor(modelagreement => agreement.Amount)
