Interest rate calculation; AgreementExtended

--- a/Client/Views/Home/EditAgreement.cshtml
+++ b/Client/Views/Home/EditAgreement.cshtml
@@ -43,7 +43,7 @@
         </div>
         <div style="margin-top:25px">
             <label>New base rate code</label> :
-            @Html.DropDownList("BaseRateType",
+            @Html.DropDownList("NewBaseRateType",
             EnumHelper.GetSelectList(typeof(RateEvaluator.SharedModels.BaseRate.RateType)),
             null,
             null)
