added http methods descriptions to help page

--- a/RateEvaluator/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/RateEvaluator/Areas/HelpPage/Views/Help/Index.cshtml
@@ -23,9 +23,9 @@
 <div id="body" class="help-page">
     <section class="featured">
         <div class="content-wrapper">
-            <h2>Introduction</h2>
+            <h2>Description</h2>
             <p>
-                Provide a general description of your APIs here.
+                WEB API to help to evaluate how the change of base rate will impact the interest rate
             </p>
         </div>
     </section>
