Removed unused view; fixed html page labels

--- a/Client/Views/Home/AgreementExtended.cshtml
+++ b/Client/Views/Home/AgreementExtended.cshtml
@@ -22,21 +22,21 @@
         <dt> @Html.DisplayNameFor(model => model.Duration) </dt>
         <dd> @Html.DisplayFor(model => model.Duration) </dd>
 
-        <dt> @Html.DisplayNameFor(model => model.BaseRateType) </dt>
+        <dt> Base Rate Type </dt>
         <dd> @Html.DisplayFor(model => model.BaseRateType) </dd>
 
         <br />
 
-        <dt> @Html.DisplayNameFor(model => model.NewBaseRateType) </dt>
+        <dt> New Base Rate Type </dt>
         <dd> @Html.DisplayFor(model => model.NewBaseRateType) </dd>
 
-        <dt> @Html.DisplayNameFor(model => model.CurrentInterestRate) </dt>
+        <dt> Current Interest Rate </dt>
         <dd> @Html.DisplayFor(model => model.CurrentInterestRate) </dd>
 
-        <dt> @Html.DisplayNameFor(model => model.NewInterestRate) </dt>
+        <dt> New Interest Rate </dt>
         <dd> @Html.DisplayFor(model => model.NewInterestRate) </dd>
 
-        <dt> @Html.DisplayNameFor(model => model.DifferenceBetweenInterestRates) </dt>
+        <dt> Difference </dt>
         <dd> @Html.DisplayFor(model => model.DifferenceBetweenInterestRates) </dd>
     </dl>
 </div>
